[tool.poetry]
name = "hybridhashmap"
version = "0.1.0"
description = "Hashmap implementation with hybrid collision resolution method based on separate chaining and open addressing."
authors = ["Dmitriy Nesterov <dim.nesterov2015@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
conan = "^1.57.0"
pytest = "^7.2.1"
cpplint = "^1.6.1"
pylint = "^2.15.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
